Updating API to search based on funding org and GGIS ID