@@ -2,89 +2,105 @@ package gov.cabinetoffice.api.services;
 
 import gov.cabinetoffice.api.dtos.submission.SubmissionDTO;
 import gov.cabinetoffice.api.dtos.submission.SubmissionListDTO;
-import gov.cabinetoffice.api.entities.*;
+import gov.cabinetoffice.api.entities.Submission;
 import gov.cabinetoffice.api.exceptions.SubmissionNotFoundException;
 import gov.cabinetoffice.api.mappers.SubmissionMapper;
-import gov.cabinetoffice.api.mappers.SubmissionMapperImpl;
 import gov.cabinetoffice.api.repositories.SubmissionRepository;
-import gov.cabinetoffice.api.test_data_generator.RandomSubmissionGenerator;
-
+import static gov.cabinetoffice.api.test_data_generator.RandomSubmissionGenerator.randomSubmission;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Spy;
-import org.mockito.junit.jupiter.MockitoExtension;
-
-import java.time.ZonedDateTime;
-import java.util.List;
-
-import static gov.cabinetoffice.api.test_data_generator.RandomSubmissionGenerator.randomSubmission;
-import static gov.cabinetoffice.api.test_data_generator.RandomSubmissionGenerator.randomSubmissionDefinition;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import org.mockito.junit.jupiter.MockitoExtension;
+
+import java.util.Collections;
+import java.util.List;
 
 @ExtendWith(MockitoExtension.class)
 class SubmissionsServiceTest {
 
 	@Mock
 	private SubmissionRepository submissionRepository;
-
+	@Mock
+	private SubmissionMapper submissionMapper;
 	@InjectMocks
 	private SubmissionsService submissionsService;
-
-	@Spy
-	private final SubmissionMapper submissionMapper = new SubmissionMapperImpl();
-
-	private final int APPLICATION_ID = 1;
+	private final int FUNDING_ORG_ID = 1;
+	private final String GGIS_REFERENCE_NUMBER = "SCH-000003589";
 
 	@Test
-	void getSubmissionByApplicationId_found() {
-		final ZonedDateTime zonedDateTime = ZonedDateTime.now();
+	void getSubmissionsByFundingOrgIdAndGgisReferenceNum_ReturnsExpectedData() {
 
-		final ApplicationFormEntity applicationForm = ApplicationFormEntity.builder()
-			.grantApplicationId(APPLICATION_ID)
-			.build();
 		final Submission submission = randomSubmission()
-			.definition(randomSubmissionDefinition(randomSubmissionDefinition().build()).build())
-			.gapId("testGapID")
-			.applicant(GrantApplicant.builder()
-				.organisationProfile(GrantApplicantOrganisationProfile.builder().legalName("testLegalName").build())
-				.build())
-			.scheme(SchemeEntity.builder().id(1).name("testSchemeName").build())
-			.submittedDate(zonedDateTime)
-			.application(applicationForm)
-			.build();
+				.build();
+		final List<Submission> submissions = List.of(submission);
 
-		when(submissionRepository.findByApplicationGrantApplicationId(APPLICATION_ID)).thenReturn(List.of(submission));
-		when(submissionMapper.submissionToSubmissionDto(submission)).thenCallRealMethod();
+		final SubmissionDTO submissionDto = SubmissionDTO
+				.builder()
+				.build();
+		final List<SubmissionDTO> submissionDTOList = List.of(submissionDto);
 
-		final SubmissionListDTO response = submissionsService.getSubmissionByApplicationId(APPLICATION_ID);
+		when(submissionRepository.findBySchemeFunderIdAndSchemeGgisIdentifier(FUNDING_ORG_ID, GGIS_REFERENCE_NUMBER))
+				.thenReturn(submissions);
 
-		final SubmissionDTO submissionDTO = response.getSubmissions().get(0);
-		final SubmissionListDTO expectedResult = SubmissionListDTO.builder()
-			.submissions(List.of(submissionDTO))
-			.build();
+		when(submissionMapper.submissionToSubmissionDto(submission))
+				.thenReturn(submissionDto);
 
-		assertThat(submissionDTO).isEqualTo(submissionMapper.submissionToSubmissionDto(submission));
+		final SubmissionListDTO methodResponse = submissionsService.getSubmissionsByFundingOrgIdAndGgisReferenceNum(FUNDING_ORG_ID, GGIS_REFERENCE_NUMBER);
 
-		verify(submissionRepository).findByApplicationGrantApplicationId(APPLICATION_ID);
-
-		assertThat(response).isEqualTo(expectedResult);
+		verify(submissionRepository).findBySchemeFunderIdAndSchemeGgisIdentifier(FUNDING_ORG_ID, GGIS_REFERENCE_NUMBER);
+		assertThat(methodResponse.getNumberOfResults()).isEqualTo(List.of(submission).size());
+		assertThat(methodResponse.getSubmissions()).isEqualTo(submissionDTOList);
 	}
 
 	@Test
-	void getSubmissionByApplicationId_notFound() {
-		when(submissionRepository.findByApplicationGrantApplicationId(APPLICATION_ID)).thenReturn(List.of());
+	void getSubmissionsByFundingOrgIdAndGgisReferenceNum_ThrowsSubmissionNotFoundException() {
+
+		when(submissionRepository.findBySchemeFunderIdAndSchemeGgisIdentifier(FUNDING_ORG_ID, GGIS_REFERENCE_NUMBER))
+				.thenReturn(Collections.emptyList());
 
 		assertThatExceptionOfType(SubmissionNotFoundException.class)
-				.isThrownBy(() -> submissionsService.getSubmissionByApplicationId(APPLICATION_ID))
-				.withMessage("No submissions found with application id " + APPLICATION_ID);
-
-		verify(submissionRepository).findByApplicationGrantApplicationId(APPLICATION_ID);
-
+				.isThrownBy(() -> submissionsService.getSubmissionsByFundingOrgIdAndGgisReferenceNum(FUNDING_ORG_ID, GGIS_REFERENCE_NUMBER))
+				.withMessage("No submissions found");
 	}
 
+	@Test
+	void getSubmissionsByFundingOrgId_ReturnsExpectedData() {
+
+		final Submission submission = randomSubmission()
+				.build();
+		final List<Submission> submissions = List.of(submission);
+
+		final SubmissionDTO submissionDto = SubmissionDTO
+				.builder()
+				.build();
+		final List<SubmissionDTO> submissionDTOList = List.of(submissionDto);
+
+		when(submissionRepository.findBySchemeFunderId(FUNDING_ORG_ID))
+				.thenReturn(submissions);
+
+		when(submissionMapper.submissionToSubmissionDto(submission))
+				.thenReturn(submissionDto);
+
+		final SubmissionListDTO methodResponse = submissionsService.getSubmissionsByFundingOrgId(FUNDING_ORG_ID);
+
+		verify(submissionRepository).findBySchemeFunderId(FUNDING_ORG_ID);
+		assertThat(methodResponse.getNumberOfResults()).isEqualTo(List.of(submission).size());
+		assertThat(methodResponse.getSubmissions()).isEqualTo(submissionDTOList);
+	}
+
+	@Test
+	void getSubmissionsByFundingOrgId_ThrowsSubmissionNotFoundException() {
+
+		when(submissionRepository.findBySchemeFunderId(FUNDING_ORG_ID))
+				.thenReturn(Collections.emptyList());
+
+		assertThatExceptionOfType(SubmissionNotFoundException.class)
+				.isThrownBy(() -> submissionsService.getSubmissionsByFundingOrgId(FUNDING_ORG_ID))
+				.withMessage("No submissions found");
+	}
 }
